chore: hardhat config & loop for many staking contract deployment

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,31 @@
-SEED="" 
-
-BSC_RPC=
-BSC_KEY=
-
-ARB_RPC=
-ARB_MAIN_RPC=
-ARB_KEY=
-
-SEPOLIA_RPC=
-ETH_RPC=
-ETH_KEY=
+SEED=""
 
 
-NAME="Staking - 30days 1.095 APR"
+################# MAINNET
+ARB_RPC=""
+AVAX_RPC=""
+BSC_RPC=""
+ETH_RPC=""
+BASE_RPC=""
+
+
+################# TESTNET
+BSC_TEST_RPC=""
+ARB_TEST_RPC=""
+SEPOLIA_RPC=""
+
+######## EXPLORER KEYS
+BSC_KEY=""  
+ARB_KEY=""
+ETH_KEY=""
+BASE_KEY=""
+
+
+################# STAKING DATA
+NAME="Staking - 270 days 10.274 APR (9h and 10 APR for test purposes)"
 # ETH-ARB: 0x560363BdA52BC6A44CA6C8c9B4a5FadbDa32fa60
-TOKEN_ADDR="0x560363BdA52BC6A44CA6C8c9B4a5FadbDa32fa60"
-RATE="9"
+TOKEN_ADDR="0x0a0fDa2921EC382b7D43e8A2Bb3524a941C767bb"
+RATE="10"
 # lock duration in days, using hours precision (e.g. 30 days = 30 * 24 = 720 hours)
-LOCK_DURATION="30"
-
-
+LOCK_DURATION="9"
 
